--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+logging.level.org.springframework.web=DEBUG
+spring.mustache.suffix=.html
+spring.profiles.active=local
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost/posts
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.jpa.hibernate.ddl-auto=create-drop
