Alternative to MySQL integration
We use from there an H2 DB to be able to continue meanwhile we continue to work on making work the mySQL DB.
Also minor errors on entity models has been solved.

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,6 @@ logging.level.org.springframework.web=DEBUG
 spring.mustache.suffix=.html
 spring.profiles.active=local
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost/posts
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.url=jdbc:h2:mem:bdSDMercadoCentral
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
