--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 logging.level.org.springframework.web=DEBUG
 spring.mustache.suffix=.html
 spring.profiles.active=local
-server.port=8081
-spring.datasource.url=jdbc:h2:mem:bdSDMercadoCentral
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost/post
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = password
+server.ssl.key-password = password
