--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework.web=DEBUG
 spring.mustache.suffix=.html
 spring.profiles.active=local
-spring.datasource.url=jdbc:mysql://localhost/posts
+spring.datasource.url=jdbc:mysql://localhost/post
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
